src/objects/Custom_Widgets__c.object
<CustomObject>
    <fields>
        <fullName>ComponentId__c</fullName>
        <label>ComponentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Map__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Map</label>
        <referenceTo>Template_Map__c</referenceTo>
        <relationshipLabel>Custom Widgets</relationshipLabel>
        <relationshipName>Custom_Widgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isDisplayed__c</fullName>
        <label>Display Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Custom Widget</label>
    <nameField>
        <label>Custom Widgets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Widgets</pluralLabel>
    <recordTypes>
        <fullName>Center_Widgets</fullName>
        <active>true</active>
        <label>Center Widgets</label>
    </recordTypes>
    <recordTypes>
        <fullName>Side_Widgets</fullName>
        <active>true</active>
        <label>Side Widgets</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>